# pyrestfile

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish-test.yaml  publish.yaml  unit_tests_and_code_checks.yaml
pyrestfileparser/: http_request.py  new_parsing_grammar.py  parser.py  parsing_grammar.py  top_level_grammar.py  vars.py
src/pyrestfile/: __init__.py  parser.py  request_block_grammar.py  top_level_grammar.py  vars.py
tests/: failing_tests.py  test_http_request.py  test_new_parsing_grammar.py  test_parser.py  test_pyrestfile.py  test_top_level_grammar.py
