[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pyrestfile"
version = "0.0.1"
description = "lightweight rest file parser written in python"
license = "MIT"

[[project.authors]]
name = "Abel Castillo"
email = "abelcastillomath@gmail.com"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pre-commit"       # keep in sync with your CI workflow
]

[tool.ruff]
line-length = 120
